# dsp2vst

./: .gitignore  CMakeLists.txt  LICENSE  README.md  commit_history.txt
src/FDNReverb/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/app/: benchmark_main.cpp  main_engine.cpp
src/audio/: AudioBuffer_opt.h  AudioEngine.cpp  AudioNode.h  AudioParameter.h
src/dsp/: CircularBuffer.h
src/effects/: Effect.h  FDNReverb.cpp  FDNReverb.h  Gain.cpp  Gain.h  ffDelay.cpp  ffDelay.h
src/ffDelay/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/io/: AudioFileIO.cpp  AudioFileIO.h
src/juce/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/translator/: translator.py
